--- a/product/package.json
+++ b/product/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
